made the unbound config template more generic

--- a/configs/macos/usr/local/etc/unbound/unbound.conf
+++ b/configs/macos/usr/local/etc/unbound/unbound.conf
@@ -18,6 +18,7 @@ server:
   # 'interface:' labeled line.  The listen interfaces are not changed on
   # reload, only on restart.
   interface: 127.0.0.1
+  interface: ::1
 
   # port to answer queries from
   port: 53
@@ -26,7 +27,7 @@ server:
   do-ip4: yes
 
   # Enable IPv6, "yes" or "no".
-  do-ip6: no
+  do-ip6: yes
 
   # Enable UDP, "yes" or "no".
   do-udp: yes
@@ -114,18 +115,17 @@ server:
 
 ## Unbound Optimization and Speed Tweaks ###
 
-
   # Enforce privacy of these addresses. Strips them away from answers.  It may
   # cause DNSSEC validation to additionally mark it as bogus.  Protects against
   # 'DNS Rebinding' (uses browser as network proxy).  Only 'private-domain' and
   # 'local-data' names are allowed to have these private addresses. No default.
-  private-address: 192.168.0.0/16
-  private-address: 172.16.0.0/12
-  private-address: 10.0.0.0/8
+  # private-address: 192.168.0.0/16
+  # private-address: 172.16.0.0/12
+  # private-address: 10.0.0.0/8
 
   # Allow the domain (and its subdomains) to contain private addresses.
   # local-data statements are allowed to contain private addresses too.
-  private-domain: "MY-PRIVATE-DOMAIN.com"
+  # private-domain: "MY-PRIVATE-DOMAIN.com"
 
   # If nonzero, unwanted replies are not only reported in statistics, but also
   # a running total is kept per thread. If it reaches the threshold, a warning
@@ -168,10 +168,10 @@ remote-control:
   # needs to resolve a *.home.lan hostname or IP.
   #
 
-forward-zone:
-  name: "MY-PRIVATE-DOMAIN.com"
-  forward-addr: 10.11.12.13        # Internal or private DNS
-  forward-ssl-upstream: no
+  #forward-zone:
+  #  name: "MY-PRIVATE-DOMAIN.com"
+  #  forward-addr: 10.11.12.13        # Internal or private DNS
+  #  forward-ssl-upstream: no
 
   # Use the following forward-zone to forward all queries to Google DNS,
   # OpenDNS.com or your local ISP's dns servers for example. To test resolution
